# ExcepDatamanipulationProject

./: README.md  main.py  requirements.py  requirements.txt  setup.cfg  testConvertData.py
src/excelDataManipulation/: ConvertData.py  main.py
src/excelDataManipulation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
