[metadata]
name = excelDataManipulation
version = 0.0.1
author = Amit Sahu
author_email = amitsahuit@gmail.com
description = This util is for converting to read input_refresh_template sheet of provided excel (Analytics Template for Exercise.xlsx) and generate the output file as shown in output_31_days_report sheet 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amitsahuit
project_urls =
    Bug Tracker = https://github.com/amitsahuit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent